xidlc/tests/invalid/http_security_api_key_missing_name.idl
#pragma xidlc package xidlc
#pragma xidlc version v1.0.0

interface InvalidApiKeySecurityService {
    @api_key(in = "header")
    @get(path = "/reports")
    string list_reports();
};

